// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput rendering renders expected elements 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</div>
`;

exports[`DateInput rendering renders expected elements when calendarTime is set 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
  <React.Portal
    container={
      {
        "tag": "body",
      }
    }
  >
    <Layer
      className="DateInput__popUp"
      level={NaN}
    >
      <Calendar
        onChange={[Function]}
        value={1000}
      />
    </Layer>
  </React.Portal>
</div>
`;

exports[`DateInput rendering renders expected elements when className is set 1`] = `
<div
  className="DateInput TestClass"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
  />
  <IconButton
    aria-label="Choose date"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</div>
`;

exports[`DateInput rendering renders expected elements when value is set 1`] = `
<div
  className="DateInput"
>
  <Layer
    as="input"
    className="DateInput__input"
    onChange={[Function]}
    type="text"
    value="foo"
  />
  <IconButton
    aria-label="Change date, foo"
    className="DateInput__icon"
    icon={[Function]}
    onClick={[Function]}
    size="medium"
    tooltipPlacement="right"
    type="ghost"
  />
</div>
`;
